--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
 
     defaultConfig {
-        applicationId "cz.bald.studenttests"
+        applicationId "cz.bald.student_tests"
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
@@ -28,10 +28,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta4"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta5"
     implementation "com.google.code.gson:gson:2.8.5"
+    implementation "androidx.room:room-runtime:2.2.5"
+    annotationProcessor  "androidx.room:room-compiler:2.2.5"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
