--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,14 +24,25 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta5"
+    implementation 'androidx.core:core-ktx:1.3.0'
+    implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta6"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.0-beta01"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.0-beta01"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.0-beta01"
     implementation "com.google.code.gson:gson:2.8.5"
     implementation "androidx.room:room-runtime:2.2.5"
     kapt "androidx.room:room-compiler:2.2.5"
